--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -9,12 +9,8 @@
  
 // ########################################################################################################################
 
-@media (min-width: @screen-sm-min) { }
 @media (min-width: @screen-md-min) { }
-@media (min-width: @screen-lg-min) {  }
-
-
-
+@media (min-width: @screen-lg-min) { }
 
 .entypo-whatsapp.shown {
   display:block!important;
@@ -46,25 +42,28 @@ body {
 
 
 .label {
-padding-top:0.4em;
-float:right;
+  padding-top:0.4em;
+  float:right;
 }
+
 .leaflet-control-attribution {
   display:none;
 }
 
 .btn-lg { font-size:18px; padding:15px; }
+
 input.lobbysearch { 
   font-size:18px; 
   border: 0px;
-// -webkit-box-shadow: inset 0px 0px 7px 0px rgba(184,184,184,1);
-// -moz-box-shadow: inset 0px 0px 7px 0px rgba(184,184,184,1);
-// box-shadow: inset 0px 0px 7px 0px rgba(184,184,184,1);
+  // -webkit-box-shadow: inset 0px 0px 7px 0px rgba(184,184,184,1);
+  // -moz-box-shadow: inset 0px 0px 7px 0px rgba(184,184,184,1);
+  // box-shadow: inset 0px 0px 7px 0px rgba(184,184,184,1);
   padding: 15px;
   height: 45px;
 }
+
 .btn-lobbysearch {
-    height: 45px;
+  height: 45px;
   width: 55px;
   background: white;
   z-index: 999;
@@ -98,6 +97,18 @@ input.lobbysearch {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11354b', endColorstr='#6392a8',GradientType=0 ); /* IE6-9 */
 }
 
+
+.grey-gradient {
+background: #a5aaaa; /* Old browsers */
+background: -moz-linear-gradient(top,  #a5aaaa 0%, #909496 46%, #666666 100%, #333333 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a5aaaa), color-stop(46%,#909496), color-stop(100%,#666666), color-stop(100%,#333333)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #a5aaaa 0%,#909496 46%,#666666 100%,#333333 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #a5aaaa 0%,#909496 46%,#666666 100%,#333333 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #a5aaaa 0%,#909496 46%,#666666 100%,#333333 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #a5aaaa 0%,#909496 46%,#666666 100%,#333333 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a5aaaa', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
+}
+
 .close {
   position: absolute;
   top: 15px;
@@ -120,6 +131,7 @@ input.lobbysearch {
 .circle-nav {
   padding:22px 0 18px 18px;
 }
+
 
 .nav-circle.small {
   width:40px;
@@ -167,7 +179,61 @@ input.lobbysearch {
   }
 }
 
-                                               
+.zdf-header-blue .navbar-collapse.in, 
+.zdf-header-blue .navbar-collapse.collapsing {
+  background-color: @zdf-blue!important;
+}
+
+.zdf-header-blue .navbar-toggle {
+  color:white!important;
+  padding:10px 10px 5px 10px;
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: transparent !important;
+  color:@zdf-orange!important;
+}
+
+.second-nav li{
+  float:left;
+  margin:20px 20px 20px 0;
+
+  &.social-links {
+    text-align:center;
+    a{
+      font-size: 24px!important;
+    }
+  }
+}
+
+@media (max-width: @screen-xs-max) { 
+  .collapsed-circle-nav {
+    a {
+      display:block;
+      width:100%;
+      min-height:50px;
+    }
+    .nav-circle.small {
+      float: left;
+    }
+    span {
+      display:block;  
+      float:left;
+      padding:10px 10px 10px 10px;
+    }
+  }
+}
+
+@media (min-width: @screen-sm-min) { 
+  .collapsed-circle-nav {
+    margin-top:20px;
+    span {
+      display:none;  
+      padding:10px 10px 10px 10px;
+    }
+  }
+}
+                                  
 //              ,,                                                      
 // `7MM"""Yp, `7MM                         `7MM"""Yp,                   
 //   MM    Yb   MM                           MM    Yb                   
@@ -191,6 +257,7 @@ input.lobbysearch {
   border:0px;
   border-bottom: 1px solid rgba(20,59,82,1);
   margin-bottom:0px;
+
 
   .navbar-toggle {
     margin:6px;
@@ -222,7 +289,7 @@ input.lobbysearch {
   .logo-name {
     padding:3px 0px;
     height: 30px;
-    margin-left:15px!important;
+    margin-left:0px!important;
     padding:5px 0px;
     color:white;
     font-size:32px;
@@ -249,16 +316,7 @@ input.lobbysearch {
         margin:25px 0 0 0;
       }
     }
-    .miz-logo {
-      float:left!important;
-      margin-top:33px;
-      max-width: 150px;
-  
-      img {
-        max-width: 200px;
-        height:auto;
-      }
-    }
+    
   }
 }
 @media (min-width: @screen-md-min) {}
@@ -318,6 +376,23 @@ input.lobbysearch {
   }
 }
 
+@media (min-width: @screen-sm-min) {
+.zdf-header-grey {
+
+.miz-logo {
+      float:left!important;
+      margin-top:10px!important;
+      max-width: 90px;
+      border-left:0px!important;
+      img {
+        max-height: 26px;
+        height:auto;
+      }
+    }
+  }
+}
+
+
 
 .browser-logo {margin-right:10px;}
 
@@ -333,18 +408,19 @@ input.lobbysearch {
   z-index:1040;
   border:0px!important;
   margin-bottom:0px;
-.miz-logo {
-  width:130px;
-  height:auto;
-  float:left;
-  margin-top: 15px;
-  margin-left: 15px;
-}
+  
+  .miz-logo {
+    width:160px;
+    height:auto;
+    float:left;
+    margin-top: 15px;
+    margin-left: 15px;
+  }
 .navbar-toggle {
   border:0px;
 }
 .navbar-brand {
-  margin-left:10px!important;
+  margin-left:0px!important;
   img.zdf-logo-lobbyradar {
     width:150px;
     margin:12px 10px 0px 10px;
@@ -381,7 +457,6 @@ input.lobbysearch {
   @media (min-width: @screen-md-min) {
 
   ul.navbar-nav a {
-    border-left:1px solid white;
     padding-left:7px;
   }
 
@@ -408,10 +483,10 @@ input.lobbysearch {
   }
 
   .zdf-logo {
-    margin-top:7px;
-    max-width:45px;
-    max-height:26px;
-        float:left;
+    margin-top:2px;
+    max-width:100px;
+    max-height:46px;
+    float:left;
 
   }
 
@@ -476,6 +551,32 @@ input.lobbysearch {
     }
   }
 
+
+.circle-link {
+  position: relative;
+  background: #1b4c64;
+  // border: 4px solid #fa7e00;
+
+  &:hover {
+    border-color:transparent;
+  }
+
+  .triangle,
+  .triangle2 {
+    margin:10px auto;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 20px 40px 0 40px;
+    border-color: #fa7e00 transparent transparent transparent;
+
+  }
+  .triangle2 {
+    margin-top:-33px;
+    border-color: #1b4c64 transparent transparent transparent;
+  }
+
+}
 .overlay {
   background:rgba(12,12,12,0.85);
   width:100%;
@@ -514,16 +615,32 @@ input.lobbysearch {
 //                                 MM                                   
 //                                _MM_                                                       
                               
+
+
+
+.about-intro {
+  line-height:1.35;
+  margin-top:20px;
+}
+
+p.first-p {
+  margin-top:20px
+}
 .static-page {
    // &:extend(.bg-gradient);
    // background-position: fixed!important;
    height:100%;
    min-height:768px;
-   width:100%; 
-  color:white;
+   width:100%;
+   padding-top:80px; 
+   color:white;
     p, h1,h2,h3,h4,h5,h6,.panel-body {
     color:white;                          
   }
+}
+
+.grey-page {
+  &:extend(.grey-gradient);
 }
 
 .home-page {
@@ -608,7 +725,7 @@ input.lobbysearch {
   width:100%;
   height:100%;
   margin-top:0px;
-  padding-top:20px;
+  padding-top:70px;
   margin-bottom:-20px;
   position: fixed;
   overflow: scroll;
@@ -891,5 +1008,13 @@ input.lobbysearch {
 
 .btn-ext {
   margin-top:17px;
+}
+
+
+@media (max-width: @screen-xs-max) {
+
+    .navbar-brand {
+      padding-left:10px!important;
+    }
 }
 
