--- a/assets/views/about.mustache
+++ b/assets/views/about.mustache
@@ -2,7 +2,7 @@
 {{>nav-grey}}
 {{>nav-blue}}
 
-<div class="about-page static-page">
+<div class="about-page static-page grey-page">
 
   <div class="container" id="main">
 
@@ -10,16 +10,16 @@
         <div class="row">
       <div class="col-sm-6">
         
-        <h3>
+        <h4 class="about-intro">
         Der ZDF-Lobbyradar ist ein gemeinsames Projekt des
 Medien&shy;innovations&shy;zentrums Babelsberg (MIZ), ZDF heute.de und
 OpenDataCity. Die Idee und das Konzept entstanden in den Köpfen von Jan
 Schneider, Dominik Wurnig und Michael Hartlep.
-</h3>
+</h4>
       </div>
             <div class="col-sm-6">
-            <br/>
-        <p>
+    
+        <p class="first-p">
 Jan Schneider studierte Online-Journalismus an der Hochschule Darmstadt.
 Nach dem Studium führte der Weg nach Berlin, wo er ein Volontariat bei
 der Produktionsfirma autoren(werk) absolvierte. Seitdem produziert Jan
