--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -1,15 +1,27 @@
 {{>header}}
 {{>nav-grey}}
 {{>nav-blue}}
-<div class="abspann-page static-page">
+
+<div class="abspann-page static-page grey-page">
   <div class="container" id="main">
 
     <div class="row">
-      <div class="col-sm-4 col-sm-offset-4 text-center">
-       <br/>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
+      <div class="col-sm-4 col-sm-offset-4">
+
+        <p class="first-p">Eine Kooperation zwischen ZDF und Medieninnovationszentrum Babelsberg MIZ
+
+
+        <p>
+Projektleitung: <br/>Hubert Krech (ZDF); Tanja Peuker (MIZ)<br/><br/>
+Recherche und Redaktion: <br/>Michael Hartlep, Jan Schneider, Dominik Wurnig (MIZ); Julia Kiehne (ZDF)<br/><br/>
+Idee und Konzept: <br/>Frederic Huwendiek, Hubert Krech (ZDF); Michael Hartlep, Jan Schneider, Dominik Wurnig (MIZ); Marco Maas (OpenDataCity)<br/><br/>
+Technische Betreuung: <br/>Jens Moeke (ZDF)<br/><br/>
+Datenbank und Visualisierung: <br/>OpenDataCity<br/><br/>
+Plug-In-Programmierung: <br/>Wegewerk<br/><br/>
+Design: <br/>Michaela Waldow (ZDF) und Felix Feierabend (Dreimorgen, Frankfurt)<br/><br/>
+Umsetzung: <br/>Felix Feierabend (Dreimorgen, Frankfurt)</p>
+        <p>Mit Dank an Alexander Barnickel, Jonas Bergmeier (Projekt Cahoots) und Tigerbytes</p>
+</p>
       </div>
     </div>
 
