--- a/assets/views/extension.mustache
+++ b/assets/views/extension.mustache
@@ -19,7 +19,7 @@
             <h4 class="list-group-item-heading">Firefox</h4>
             <p class="list-group-item-text">    
             <button class="hidden-xs btn-ext btn btn-info">
-        Installier dir den Durchblick für Firefox!
+        Für Firefox installieren!
       </button></p>
             <br style="clear:both"/>
          
@@ -27,7 +27,7 @@
             <h4 class="list-group-item-heading">Chrome</h4>
             <p class="list-group-item-text">    
             <button class="hidden-xs btn-ext btn btn-info">
-        Installier dir den Durchblick für Chrome!
+        Für Chrome installieren!
       </button></p>
             <br style="clear:both"/>
 
@@ -35,7 +35,7 @@
             <h4 class="list-group-item-heading">Safari</h4>
             <p class="list-group-item-text">    
             <button class="hidden-xs btn-ext btn btn-info">
-        Installier dir den Durchblick für Safari!
+        Für Safari installieren!
       </button></p>
             <br style="clear:both"/>
 
