--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -1,7 +1,7 @@
 {{>header}}
 {{>nav-grey}}
 {{>nav-blue}}
-<div class="faq-page static-page">
+<div class="faq-page static-page grey-page">
 
 	<div class="container" id="main">
 
@@ -36,13 +36,13 @@
 						<div class="panel-heading" role="tab" id="headingTwo">
 							<h4 class="panel-title">
 								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false">
-									Was soll Lobbyradar?
+									Was will das Lobbyradar?
 								</a>
 							</h4>
 						</div>
 						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 							<div class="panel-body">
-								Unternehmen, Verbände und Vereine haben Interessen, die sie durchsetzen wollen. Deshalb stehen Sie in stetigem Austausch untereinander und mit der Politik um ihre Interessen zu vertreten. Damit sind sie ein Teil des politischen Systems. Schwierig wird es aber, wenn Lobbygruppen mit mehr Geld oder besseren Kontakten mehr Einfluss haben als Lobbys mit wenigen Mitarbeitern und finanziellen Möglichkeiten. Und wenn niemand außerhalb etwas davon mitbekommt. Dann besteht die Gefahr, dass Politiker nicht im Sinne der Allgemeinheit entscheiden, sondern sich die Interessen Einzelner durchsetzen. Der ZDF Lobbyradar zeigt  Verbindungen zwischen Politik, Wirtschaft und Interessenvertretern und macht Lobbyismus transparenter.
+								Unternehmen, Verbände und Vereine – alle haben Interessen, die sie durchsetzen wollen. Deshalb stehen sie in stetigem Austausch miteinander und mit der Politik, um ihre Interessen zu vertreten. Damit sind sie ein Teil des politischen Systems. Schwierig wird es, wenn Lobbygruppen mit mehr Geld oder besseren Kontakten mehr Einfluss haben als Lobbys mit weniger Mitarbeitern und finanziellen Möglichkeiten. Und wenn niemand außerhalb etwas davon mitbekommt. Dann besteht die Gefahr, dass Politiker nicht im Sinne der Allgemeinheit entscheiden, sondern sich die Interessen Einzelner durchsetzen. Der ZDF-Lobbyradar zeigt Verbindungen zwischen Politik, Wirtschaft und Interessenvertretern und macht Lobbyismus transparenter.
 							</div>
 						</div>
 					</div>
@@ -56,7 +56,7 @@
 						</div>
 						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 							<div class="panel-body">
-								Lobbyradar gibt es als Website und als Browser-Erweiterung für Firefox, Crome und Safari. Einmal installiert markiert Lobbyradar die Namen und Organisationen, die in unserer Datenbank hinterlegt sind. Fährt man dann mit der Maus über die Markierung, lädt Lobbyradar die wichtigsten Infos aus unserer Datenbank und zeigt sie an. So werden Nachrichten und Geschichten in einen neuen Kontext gesetzt und Sie erhalten nützliche Zusatzinformationen. Kostenlos und transparent.
+								Lobbyradar gibt es als Website und als Browser-Erweiterung für Firefox, Chrome und Safari. Einmal installiert, markiert Lobbyradar die Namen und Organisationen, die in unserer Datenbank hinterlegt sind, in den Texten, die Sie lesen. Fährt man dann mit der Maus über die Markierung, lädt Lobbyradar die wichtigsten Infos aus unserer Datenbank und zeigt sie an. So werden Nachrichten und Geschichten in einen neuen Kontext gesetzt und Sie erhalten nützliche Zusatzinformationen. Kostenlos und transparent.
 							</div>
 						</div>
 					</div>
@@ -84,7 +84,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Wir versuchen, alle relevanten Lobby-Akteure und deren Verbindungen abzubilden. Es gibt aber Personen und Organisationen, die nicht in unseren Datensätzen und auch nicht in den Medien auftauchen. Deshalb sind sie in unserer Datenbank nicht zu finden - selbst, wenn sie Verbindungen zu Lobbyverbänden haben. Sie fliegen (noch) unter dem Lobbyradar-Schirm. Wir wollen das ändern und Sie können uns dabei helfen. Wenn Sie Lobbyismus transparenter machen und Akteure und Verbindungen ergänzen wollen, einfach hier klicken!
+               Wir versuchen, alle relevanten Lobby-Akteure und deren Verbindungen abzubilden. Es gibt aber Personen und Organisationen, die nicht in unseren Datensätzen und auch nicht in den Medien auftauchen. Deshalb sind sie in unserer Datenbank nicht zu finden - selbst, wenn sie Verbindungen zu Lobbyverbänden haben. Sie fliegen (noch) unter dem Lobbyradar-Schirm. Wir wollen das ändern und Sie können uns dabei helfen. Wenn Sie Lobbyismus transparenter machen und Akteure und Verbindungen ergänzen wollen, einfach hier klicken!
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Alle Informationen stammen aus öffentlich zugänglichen Datenbanken und Dokumenten: Der Verbändeliste und der Parteispendenliste des Deutschen Bundestages, der von Abgeordneten veröffentlichten Nebeneinkünfte, der Seitenwechsler-Datenbank von LobbyControl und der Think-Tank-Network-Initiative. Zusätzlich haben wir selbst recherchiert und Verbindungen und Akteure eingetragen. Aktuell umfasst die Datenbank knapp 20.000 Personen, 6.000 Organisationen und 30.000 Verbindungen. Die Datenbank wird ständig aktualisiert.
+               Alle Informationen stammen aus öffentlich zugänglichen Datenbanken und Dokumenten: Der Verbändeliste und der Parteispendenliste des Deutschen Bundestages, der von Abgeordneten veröffentlichten Nebeneinkünfte, der Seitenwechsler-Datenbank von LobbyControl und der Think-Tank-Network-Initiative. Zusätzlich haben wir selbst recherchiert und Verbindungen und Akteure eingetragen. Aktuell umfasst die Datenbank knapp 20.000 Personen, 6.000 Organisationen und 30.000 Verbindungen. Die Datenbank wird ständig aktualisiert.
               </div>
             </div>
           </div>
@@ -106,13 +106,13 @@
             <div class="panel-heading" role="tab" id="headingSeven">
               <h4 class="panel-title">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false">
-                  Wie kann ich Verbindungen korrigieren oder ergänzen?
+Wie kann ich Verbindungen korrigieren oder ergänzen?
                 </a>
               </h4>
             </div>
             <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Lobbyradar soll aktuell bleiben und wachsen. Dach dazu brauchen wir Hilfe! Haben wir eine Person oder Institution vergessen, die unbedingt in die Datenbank gehört? Oder fehlt eine Verbindung einer Person? Dann können Sie uns das über den Button “Verbindung melden” mitteilen. Auch falsche Verbindungen können über den Button “Fehler melden” an uns gemeldet werden. Wir prüfen alle Infos und ergänzen öder ändern sie in der Datenbank.
+                Lobbyradar soll aktuell bleiben und wachsen. Doch dazu brauchen wir Hilfe! Haben wir eine Person oder Institution vergessen, die unbedingt in die Datenbank gehört? Oder fehlt eine Verbindung einer Person? Dann können Sie uns das über den Button “Verbindung melden” mitteilen. Auch falsche Verbindungen können über den Button “Fehler melden” an uns gemeldet werden. Wir prüfen alle Infos und ergänzen oder ändern sie in der Datenbank.
               </div>
             </div>
           </div>
@@ -120,13 +120,13 @@
             <div class="panel-heading" role="tab" id="headingEight">
               <h4 class="panel-title">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false">
-                  Funktioniert LobbyRadar auch auf meinem Smartphone oder Tablet?
+                  Funktioniert Lobbyradar auch auf meinem Smartphone oder Tablet?
                 </a>
               </h4>
             </div>
             <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Das Lobbyradar-Netzwerk funktiniert auch auf Smartphones und Tablets. Für die Browser-Erweiterung haben wir bisher leider keine mobile Lösung. Hinweise, Tipps oder Anregungen nehmen wir aber gerne an - <a href="#">hier klicken!</a>
+                Das Lobbyradar-Netzwerk funktioniert auch auf Smartphones und Tablets. Für die Browser-Erweiterung haben wir bisher leider keine mobile Lösung. Hinweise, Tipps oder Anregungen nehmen wir aber gerne an - <a hreF="#">hier klicken!</a>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
             <div class="panel-heading" role="tab" id="headingNine">
               <h4 class="panel-title">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false">
-                  Welche Daten speichern wir über Dich?
+                  Welche Daten speichern wir?
                 </a>
               </h4>
             </div>
