--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -15,23 +15,22 @@
           <i class="fa fa-video-camera"></i>
 
         </div>
-          <h2>Um was geht es<br/>beim Lobbyradar?</h2>
+          <h2>Worum geht es <br/>beim Lobbyradar?</h2>
           <p>
-            Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum.
-
+Wie funktioniert der Lobbyradar? Was kann der User selbst machen? Hier sind alle Infos!
           </p>
-           <a href="/intro"> <button class="btn btn-info btn-sm">Jetzt erfahren!</button></a>
+           <a class="circle-link" href="/um-was-geht-es">Jetzt erfahren!<div class="triangle"></div><div class="triangle2"></div></a>
         </div>
       </div>
       <div class="col-sm-6 col-md-6 col-lg-3">
-        <div id="extension" class="nav-circle big">
+        <div id="extension" class="hidden-xs hidden-sm nav-circle big">
 
         <div class="nav-circle small">
         <i class="fa fa-download"></i>
         </div>
-          <h2>Die<br/>Browsererweiterung</h2>
-          <p>Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum.</p>
-                 <a href="/extension"> <button class="btn btn-info btn-sm">Jetzt Installieren</button></a>
+          <h2>Die Lobbyradar-<br/>Browser-Erweiterung</h2>
+          <p>Wir zeigen Ihnen die Verbindungen dort, wo Sie gerade surfen: Installieren Sie die Add-Ons! </p>
+                 <a class="circle-link" href="/download-plugin">Jetzt Installieren<div class="triangle"></div><div class="triangle2"></div></a>
 
         </div>
       </div>
@@ -41,9 +40,10 @@
         <div class="nav-circle small">
         <i class="fa fa-newspaper-o"></i>
         </div>
-        <h2>Aktuelles zum<br/>Lobbyradar</h2>
-        <p>Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur.</p>
-                 <a href="http://www.heute.de" target="_blank"> <button class="btn btn-info btn-sm">Zur Heute.de!</button></a>
+        <h2>Alle Beiträge zum<br/>Lobbyradar</h2>
+        <p>Artikel und Videos zum <br/>Lobbyradar bei ZDFheute.de<br/><br/>
+</p>
+                 <a href="/artikel" class="circle-link" target="_blank">Zu den Artikeln<div class="triangle"></div><div class="triangle2"></div></a>
 
         </div>
       </div>
@@ -52,9 +52,10 @@
                                 <div class="nav-circle small">
         <i class="fa fa-sitemap"></i>
         </div>
-          <h2>Suche nach Personen<br/>und Verbindungen</h2>
-          <p>Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorpr nulla.</p>
-                   <a href="/app">   <button class="btn btn-info btn-sm">Visualisierung öffnen</button></a>
+          <h2>Wer mit wem? <br/><br/></h2>
+          <p>Wo treffen die Lobbyisten auf die Entscheider? Suchen Sie selbst nach Verbindungen!</p>
+                   <a class="circle-link" href="/verbindungssuche">  
+                   Visualisierung öffnen <div class="triangle"></div><div class="triangle2"></div></a>
 
         </div>
       </div>
