--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -3,7 +3,11 @@
 {{>nav-blue}}
 <div class="static-page">
 <div class="container">
-	
+		<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+		<h1>So funktioniert ZDFLobbyradar</h1>
+			
+					</div>
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
 			<br/><br/>
@@ -15,15 +19,7 @@
 		</div>
 		
 	</div>
-	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
-		<h1>Wer will was, und von wem?</h1>
-			<p class="intro-copy">
-				Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. MaecenasVivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit.
 
-Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. sdiam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatvestibulum.
-			</p>
-					</div>
 		
 	</div>
 </div></div>
