--- a/assets/views/nav-blue.mustache
+++ b/assets/views/nav-blue.mustache
@@ -15,48 +15,43 @@
 				<a class="navbar-brand logo-name" href="/">    
 					<img class="zdf-logo-lobbyradar img-responsive" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" >
 				</a>
-								<a class="miz-logo" href="/">    
-
-			<img class="hidden-xs" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
-</a>
+								
 
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<div class="circle-nav">
-
-					<div class="nav-circle small">
-						<a href="/app"><i class="fa fa-sitemap"></i></a>
-					</div>
-
-					<div class="nav-circle small">
-						<a href="http://www.heute.de" target="_blank"><i class="fa fa-newspaper-o"></i></a>
-					</div>
-
-					<div class="nav-circle small">
-						<a href="/extension"><i class="fa fa-download"></i></a>
-					</div>
-
-					<div class="nav-circle small">
-						<a href="/intro"><i class="fa fa-video-camera"></i></a>
-					</div>
-
+				<div class="collapsed-circle-nav">
+					<a href="/um-was-geht-es">
+						<div class="nav-circle small"><i class="fa fa-sitemap"></i></div>
+						<span>Worum geht es beim Lobbyradar?</span>
+					</a>
+					<a href="/artikel" >
+						<div class="nav-circle small"><i class="fa fa-newspaper-o"></i></div>
+						<span>Alle Beiträge zum Lobbyradar</span>
+					</a>
+					<a class=" hidden-xs hidden-sm " href="/download-plugin">
+						<div class="nav-circle small"><i class="fa fa-download"></i></div>
+						<span>Die Lobbyradar-Browser-Erweiterung</span>
+					</a>
+					<a href="/verbindungssuche">
+						<div class="nav-circle small"><i class="fa fa-video-camera"></i></div>
+						<span>Wer mit wem? </span>
+					</a>
 				</div>
-				<div class="visible-xs-block">
+				<div class="visible-xs-block second-nav">
 
-				<li><a href="/faq">FAQ & Hilfe</a></li>
-				<li><a href="/about">Über das Projekt</a></li>
+				<li><a href="/oft-gestellte-fragen">FAQ & Hilfe</a></li>
 				<li><a href="/abspann">Abspann</a></li>
-														<li><a href="http://www.heute.de/" target="_blank">ZDFheute</a></li>
 
 				<li class="social-links">
+				<div>
 					<a href="#"><i class="fa fa-facebook"></i></a>
 					<a href="#"><i class="fa fa-twitter"></i></a>
 					<a href="#"><i class="fa fa-google-plus"></i></a>
 					<a href="#"><i class="fa fa-envelope"></i></a>
-
+</div>
 				</li>
 
 		</div>
