--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -5,8 +5,8 @@
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 
-			<a class="navbar-brand" href="#">				
-				<img class="zdf-logo img-responsive" src="/assets/images/ZDF-logo-45x26.svg" onerror="this.src='/assets/images/ZDF-logo-45x26.png';this.onerror=null;" alt="ZDF" >
+			<a class="navbar-brand" href="http://www.heute.de/">				
+				<img class="zdf-logo img-responsive" src="/assets/images/zdf-heute.png" alt="ZDF" >
 			</a>
 
 			<img class="visible-xs-block miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
@@ -14,17 +14,24 @@
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div>
+		<div class="collapse navbar-collapse">
 
 			<ul class="nav navbar-nav hidden-xs">
-				<li><a href="http://www.heute.de/" target="_blank">ZDFheute</a></li>
+				<li>
+					<a class="miz-logo" href="/">    
+						<img class="hidden-xs" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
+					</a>
+				</li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right hidden-xs">
 
-				<li><a href="/faq">FAQ & Hilfe</a></li>
-				<li><a href="/about">Über das Projekt</a></li>
-				<li><a href="/abspann">Abspann</a></li>
+				<li>
+					<a href="/oft-gestellte-fragen">FAQ & Hilfe</a>
+				</li>
+				<li>
+					<a href="/abspann">Abspann</a>
+				</li>
 
 				<li class="social-links">
 					<a href="#"><i class="fa fa-facebook"></i></a>
