Reorganize JS Code; Delete Old Files; Cleanup

--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -35,6 +35,7 @@
 	
 </div> {{! end .fullscreen }}
 
+<script type="text/javascript" src="/assets/js/visualisation.js"></script>
 <script type="text/javascript" src="/assets/js/leaflet.js"></script>
 <script type="text/javascript" src="http://lobbyradar.opendatacloud.de/lobbynetwork/graph.js"></script>
 <script type="text/javascript" src="/assets/js/networkviz.js"></script>
