--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -10,15 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="/assets/css/lobbyradar.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/leaflet.css">
 
-	<!-- js -->
 	<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
-	<script type="text/javascript" src="/assets/js/share.min.js"></script>
-
-	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/assets/js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="/assets/js/lobbyradar.js"></script>
-
-	<script type="text/javascript" src="/assets/js/moment-with-locales.min.js"></script>
+  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/assets/js/moment-with-locales.min.js"></script>
+	
+	<script type="text/javascript" src="/assets/js/main.js"></script>
 
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width">
