first draft of articles loading

--- a/assets/views/articles.mustache
+++ b/assets/views/articles.mustache
@@ -27,4 +27,8 @@ Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a p
 		
 	</div>
 </div></div>
+{{! <script type="text/javascript" src='http://www.zdf.de/api/v2/content/p12:37951336?callback=GetZDFArticles'>
+</script> }}
+<script type="text/javascript" src="/assets/js/articles.js"></script>
+
 {{>footer}}
