try new method for zdf xml; add extension files to download

--- a/assets/views/extension.mustache
+++ b/assets/views/extension.mustache
@@ -18,25 +18,25 @@
             <img src="/assets/images/firefox_256x256.png" width="64" height="auto" alt="..." class="browser-logo" style="float:left;">
             <h4 class="list-group-item-heading">Firefox</h4>
             <p class="list-group-item-text">    
-            <button class="hidden-xs btn-ext btn btn-info">
-        Für Firefox installieren!
-      </button></p>
+            <a role="button" class="hidden-xs btn-ext btn btn-info" href="/assets/ext/lobbyradar-firefox.xpi">
+        Für Firefox installieren!</a>
+     </p>
             <br style="clear:both"/>
          
             <img src="/assets/images/chrome_256x256.png" width="64" height="auto" alt="..." class="browser-logo" style="float:left;">
             <h4 class="list-group-item-heading">Chrome</h4>
             <p class="list-group-item-text">    
-            <button class="hidden-xs btn-ext btn btn-info">
-        Für Chrome installieren!
-      </button></p>
+            <a role="button" class="hidden-xs btn-ext btn btn-info" href="/assets/ext/lobbyradar-chrome.crx">
+        Für Chrome installieren!</a>
+      </p>
             <br style="clear:both"/>
 
             <img src="/assets/images/safari_256x256.png" width="64" height="auto" alt="..." class="browser-logo" style="float:left;">
             <h4 class="list-group-item-heading">Safari</h4>
             <p class="list-group-item-text">    
-            <button class="hidden-xs btn-ext btn btn-info">
-        Für Safari installieren!
-      </button></p>
+            <a role="button" class="hidden-xs btn-ext btn btn-info" href="/assets/ext/lobbyradar-safari.safariextz">
+        Für Safari installieren!</a>
+ </p>
             <br style="clear:both"/>
 
     </div>
